Bug 154369 - FILEOPEN DOCX Numbering loses its parastyle-assigned color b/c of applied charstyle
Summary: FILEOPEN DOCX Numbering loses its parastyle-assigned color b/c of applied cha...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Paragraph OOXML-Doc-Themes
  Show dependency treegraph
 
Reported: 2023-03-24 17:22 UTC by Gabor Kelemen (Collabora)
Modified: 2024-04-25 08:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (26.80 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-03-24 17:22 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the document in Word and Writer (112.71 KB, image/png)
2023-03-24 17:22 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-03-24 17:22:05 UTC
Created attachment 186193 [details]
Example file from Word

Attached document contains a few paragraphs formatted with Heading 1 style, font color set as Accent 1 from theme.
The numbering A and B does not show this color in Writer, but the default black.

1. Open attached document
-> the A and B numberings are not green.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b5c3a7502f7ff6ccf0f829c1f3a2ba50b8584c41
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: de-DE
Calc: threaded

This was good in 7.0, broke in 7.1 with:

https://git.libreoffice.org/core/+/c77b9c349f0a48392d8cb7a49532844b2cafb5ba

author	Vasily Melenchuk <vasily.melenchuk@cib.de>	Tue Aug 18 17:59:26 2020 +0200
committer	Michael Stahl <michael.stahl@cib.de>	Fri Aug 28 17:30:57 2020 +0200
tree 447a21904d3a18c18c8959b132409cc8ea05cf6f
parent bb6668bc596e62474ed2e1e923d9c9cd51685258 [diff]

tdf#131801: sw: support of style references in ListAutoFormat
Comment 1 Gabor Kelemen (Collabora) 2023-03-24 17:22:30 UTC
Created attachment 186194 [details]
Screenshot of the document in Word and Writer
Comment 2 Dieter 2023-04-07 15:49:55 UTC
I confirm it with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1e9f4de320f67d1218c710bcee1969a2324c6888
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded
Comment 3 Justin L 2023-06-02 12:36:52 UTC
Here is something a bit bizarre. in LO, select the entire paragraph and change the font colour to red. Now the numbering will show up as green.
Comment 4 Oliver Specht (CIB) 2023-11-22 11:01:18 UTC
In checkApplyParagraphMarkFormatToNumbering()  (txtfld.cxx) the attributes from the registered character format are all copied and applied in SwFont::SetDiffFnt()
It should only apply items with a state > SfxItemState::DEFAULT
Comment 5 Commit Notification 2023-12-06 14:25:10 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5de53775531a358c6775d265a3a19699c96a8139

tdf#154369 don't apply default items to numbering symbols

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2023-12-08 12:32:09 UTC
Verified in

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5ff64bfcf9bb8c27670c4cb44a778105008407ed
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Calc: threaded

now the A and B numberings are green.

Not mentioned yet is that the 1-4 numberings are bold, but they should not be. Needs a followup.
Comment #3 needs to be investigated, I see it too.
Comment 7 Gabor Kelemen (Collabora) 2023-12-08 22:31:13 UTC
(In reply to Justin L from comment #3)
> Here is something a bit bizarre. in LO, select the entire paragraph and
> change the font colour to red. Now the numbering will show up as green.

This is now bug 158610, thanks for noticing!
Comment 8 Commit Notification 2024-04-25 08:02:06 UTC
Kira Tubo committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c37acfce0aab520f30714961d333b1cd52eba4e7

tdf#154369: sw unit test: numbered list color in docx

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.