tdf#154369 don't apply default items to numbering symbols

default attributes from the CharFmt should no be applied to the
numbering symbol

Change-Id: Ifa2d2ace575b888a43fa948f3b71605cfe20f129
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159817
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>